--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,12 @@
 			<version>21.1.0.0</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 
