--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:oracle:thin:@db202107061751_high?TNS_ADMIN=C:/Wallet_DB202107061751
 spring.datasource.username=admin
 spring.datasource.password=Pignatel2020
-
+spring.datasource.platform=h2
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.type=oracle.ucp.jdbc.UCPDataSource
 spring.datasource.ucp.connection-factory-class-name=oracle.jdbc.replay.OracleDataSourceImpl
@@ -10,3 +10,10 @@ spring.datasource.ucp.connection-pool-name=connectionPoolName1
 spring.datasource.ucp.initial-pool-size=15
 spring.datasource.ucp.min-pool-size=10
 spring.datasource.ucp.max-pool-size=30
+
+spring.datasource.connection-test-query=SELECT 1
+spring.datasource.test-while-idle=true
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-interval=10000
+spring.datasource.log-validation-errors=true
+spring.datasource.validation-query=SELECT 1
