--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.datasource.test-on-borrow=true
 spring.datasource.validation-interval=10000
 spring.datasource.log-validation-errors=true
 spring.datasource.validation-query=SELECT 1
+
+spring.jpa.properties.hibernate.allow_update_outside_transaction= true
