--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.log-validation-errors=true
 spring.datasource.validation-query=SELECT 1
 
 spring.jpa.properties.hibernate.allow_update_outside_transaction= true
+
+spring.mvc.format.date=dd/MM/yyyy
