--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.datasource.validation-interval=10000
 spring.datasource.log-validation-errors=true
 spring.datasource.validation-query=SELECT 1
 
+spring.jpa.show-sql=true
+
 spring.jpa.properties.hibernate.allow_update_outside_transaction= true
 
 spring.mvc.format.date=dd/MM/yyyy
